# brain-games

./: .gitignore  LICENSE.md  Makefile  README.md  pyproject.toml
brain_games/: cli.py  consts.py  engine.py  utils.py
brain_games/games/: brain_calc.py  brain_even.py  brain_games_greeting.py  brain_gcd.py  brain_prime.py  brain_progression.py  calc.py  even.py  gcd.py  prime.py  progression.py
brain_games/scripts/: brain.py  brain_calc.py  brain_calc_script.py  brain_even.py  brain_even_script.py  brain_games.py  brain_games_greeting.py  brain_gcd.py  brain_gcd_script.py  brain_prime.py  brain_prime_script.py  brain_progression.py  brain_progression_script.py  greetings.py
